correct text anchor for right aligned value axes

--- a/modest-charts.scss
+++ b/modest-charts.scss
@@ -50,6 +50,10 @@
 
 .y.axis text{
 	text-anchor:end;
+}
+
+.y.axis.right text{
+	text-anchor:start;
 }path.line{
 	fill:none;
 	stroke-width:1.5;
